--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ os:
   - osx
 julia:
   - release
-  - nightly
+  - 0.5
 notifications:
   email: false
+before_install:
+  # - sudo apt-get -qq update
+  - sudo apt-get install git
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
